@@ -37,6 +37,7 @@ v2.6.25
 * Do not store XAUTH password in a variable if read from the prompt [Avesh]
 * spi/spigrp/tncfg blindly assumed KLIPS. Give nicer error output [Avesh]
 * Fix for _updown.netkey not being able to delete route [Tuomo]
+* Fix bad bare_shunt entry that break tunnel routing [David]
 
 v2.6.24
 * Give clear warning about missing defaultroute [Tuomo]
